<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet">

    <ImageView
        android:id="@+id/img_bottom_sheet"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/imageDescription"
        android:layout_margin="@dimen/_5sdp"
        android:scaleType="centerCrop"
        android:src="@color/accent"/>
    
    <LinearLayout
        android:id="@+id/linear_first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/img_bottom_sheet"
        app:layout_constraintTop_toTopOf="@id/img_bottom_sheet"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_5sdp">

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:gravity="center"
            android:textColor="@color/g_black"
            android:fontFamily="@font/myfont"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/area"
            android:textColor="@color/g_black"
            android:fontFamily="@font/myfont"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/bottom_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/myfont"
        android:text="@string/imageDescription"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_bottom_sheet"
        app:layout_constraintTop_toBottomOf="@id/linear_first" />

    <TextView
        android:id="@+id/bottom_more"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:fontFamily="@font/myfont"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_bottom_sheet"
        app:layout_constraintTop_toBottomOf="@id/bottom_name" />



</androidx.constraintlayout.widget.ConstraintLayout>