<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SearchFragment">

    <LinearLayout
        android:id="@+id/linear_search"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        
        <EditText
            android:id="@+id/ed_search_box"
            android:layout_weight="1"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/search_box_background"
            android:hint="@string/searchHint"/>

        <ImageView
            android:id="@+id/img_search"
            android:layout_gravity="center"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_arrow"
            android:contentDescription="@string/imageDescription"/>
    </LinearLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_meals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_search"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"/>

    <TextView
        android:id="@+id/tv_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_search"
        android:text="@string/not_found"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:textSize="@dimen/_30ssp"
        android:fontFamily="@font/myfont"
        android:textColor="@color/accent"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>